...
import com.github.swent.swisstravel.R
import com.github.swent.swisstravel.model.trip.Trip
import com.github.swent.swisstravel.ui.trips.TripsViewModel

/** Test tags for the [tripListItems]. */
object TripListTestTags {
  const val TRIP_LIST = "TripListLazyColumn"
  const val EMPTY_MESSAGE = "TripListEmptyMessage"
}

/**
 * Holds the state parameters for the [tripListItems].
 *
 * @param trips The list of trips to display.
...
